--- a/index.html
+++ b/index.html
@@ -10,10 +10,16 @@
 <body>
     <div id="main">
         <div id="header">
-            <div id="mid">
-                <div id="leftdiv"></div>
-            <div id="rightdiv"></div>
-            </div> 
+            <div id="top"></div>
+            <div id="bottom">
+                <div id="mid">
+                    <div id="leftdiv">
+                        <h1>This website is awesome</h1>
+                        <h4>This is a website subtext that gives you a summary about the purpose of the website</h4>
+                    </div>
+                <div id="rightdiv"></div>
+                </div>
+            </div>   
         </div>
     </div>      
     
