changed the font size of h1 in leftidv, increased left-right padding in header div

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
                         <h1>This website is awesome</h1>
                         <h4>This is a website subtext that gives you a summary about the purpose of the website</h4>
                     </div>
-                <div id="rightdiv"></div>
+                <div id="rightdiv">
+                    <h4>This is a placeholder for an image
+                    </h4>
+                </div>
                 </div>
             </div>   
         </div>
