--- a/project.html
+++ b/project.html
@@ -10,6 +10,8 @@
 <body>
     <div id="main">
         <div id="header">
+            <div id="top"></div>
+            <div id="bottom"></div>
         </div>
         <div id="middle"></div>
         <div id="footer"></div>
