--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
 <body>
     <div id="main">
         <div id="header">
-            <div id="top"></div>
+            <div id="top">
+                <div id="left">
+                    <h2>Header Logo</h2>
+                </div>
+                <div id="right">
+                    <a href="">header link one</a>
+                    <a href="">header link two</a>
+                    <a href="">header link three</a>
+                </div>
+                
+            </div>
             <div id="bottom">
                 <div id="mid">
                     <div id="leftdiv">
